--- a/Ejercicio20/ejercicio20.html
+++ b/Ejercicio20/ejercicio20.html
@@ -2,21 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8"> <!-- conjunto de caracteres-->
+  <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicio al cliente</title>
-  <link rel="stylesheet" href="css/styleEjercicio20.css"> <!--link a un css externo-->
-  <!--<link rel="stylesheet" href="styles.css"> <!--link a un css externo-->
-  <link rel="stylesheet" href="css/allpages.css"> <!--link a un css externo-->
-   <!--link a un js externo-->
+  <link rel="stylesheet" href="css/styleEjercicio20.css"> 
+  <link rel="stylesheet" href="css/allpages.css"> 
 </head>
 
 <body>
   <header>
     <nav class="barra__superior"> <!-- barra de navegacion superior-->
       <div class="logo"> <!-- logo de la pagina -->
-        <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> <!-- logo de la pagina -->
-        <!-- display: block; + maring 0 auto; centrar imagen  -->
+        <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> 
       </div>
       <div class="titulo__header"> <!-- titulo de la pagina -->
         
@@ -39,7 +36,6 @@
       <div class="select__container">
 
         <select name="select_pais" id="paises" class="select__list" onchange ="cambiarCapitales(this.value)">
-
           <option value="" disabled selected>Selecciona un país</option>
           <option value="Argentina">Argentina</option>
           <option value="Chile">Chile</option>
@@ -71,5 +67,3 @@
 </body>
   <script src="js/ejercicio20.js"></script>
 </html>
-
-<!--brisa edtuvo aqui-->
