--- a/Ejercicio21/ejercicio21.html
+++ b/Ejercicio21/ejercicio21.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8"> <!-- conjunto de caracteres-->
+  <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicio al cliente</title>
-  <link rel="stylesheet" href="css/styleEjercicio21.css"> <!--link a un css externo-->
-  <link rel="stylesheet" href="css/allpages.css"> <!--link a un css externo-->
-  <!--link a un js externo-->
+  <link rel="stylesheet" href="css/styleEjercicio21.css"> 
+  <link rel="stylesheet" href="css/allpages.css">
+  
 </head>
 
 <body>
@@ -34,9 +34,7 @@
 
     <section class="contact">
 
-      <!--https://javascript.info/events-change-input-->
       <h2 class ="contact__title">Programacion Visual APU</h2>
-      
       <p class="contact__text">Escribe un mensaje y lo veras en el texto de abajo</p>
       <input type="text" id="mitexto" placeholder="Escribe tu mensaje aquí"> <!-- placeholder mensaje de espera -->
       <h2 class="contact__title">Texto</h2>
@@ -55,9 +53,7 @@
 
 
   <script src="js/ejercicio21.js"></script>
-  <!-- es mejor mover esta línea al final del <body> para asegurarte de que el DOM esté completamente cargado antes de que el script se ejecute -->
+
 </body>
 
 </html>
-
-<!--Shift + alt + f para arreglar espaciado-->
