--- a/Ejercicio21/index.html
+++ b/Ejercicio21/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <nav class="barra__superior"> <!-- barra de navegacion superior-->
-            <div class="logo"> <!-- logo de la pagina -->
-                <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> <!-- logo de la pagina -->
-                <!-- display: block; + maring 0 auto; centrar imagen  -->
+        <nav class="barra__superior"> 
+            <div class="logo">
+                <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> 
             </div>
             <div class="titulo__header"> <!-- titulo de la pagina -->
-                <h1>Japon un lugar para visitar</h1><!--siempre estara mi titulo-->
+                <h1>Japon un lugar para visitar</h1>
             </div>
         </nav>
         <nav class="page__nav"> <!-- barra de navegacion inferior-->
@@ -30,13 +29,11 @@
             Japon un buen lugar - Curiosidades
         </h1>
         <section>
-            <!-- ya no se hace! el combinar lenguajes poner el style en el html es mejor con un link modularizar-->
+          
             <h2 style="color: darkgreen;">Su gran amor por las maquinas expendedoras</h2>
             <img src="https://easycdn.es/4/i/una-de-las-100-curiosidades-de-japon-son-su-variedad-de-maquinas-expendedoras_25090.webp" style="display: block; margin: 0 auto; border: 2px solid #ccc;" width="400" height="300" alt="Imagen de maquina de modo ejemplo">
-        <!--  diplay: block; + maring 0 auto; centrar imagen  -->
-        <!--  border: 2px solid #ccc; le da un borde gris clarito -->
+  
             <p style="font-size: 16px; line-height: 1.5;color: #333;">
-            <!-- color: #333; color gris oscuro  le doy size de 16 px i line-height de 1.5(espacio de linea)--> 
                 Japón tiene más de 5 millones de máquinas expendedoras<br>
                 Aquí las máquinas expendedoras son una maravilla. Puedes encontrar desde café caliente hasta ¡ramen enlatado! Algunas incluso venden huevos frescos y paraguas. ¿Lo mejor? Están por todos lados, así que nunca te quedarás sin snacks o sorpresas en medio de la calle.
             </p>
@@ -50,8 +47,9 @@
             </p>
         </section>
     </article>
-    <footer>
-        <p> 2025 - company_name Comunicacion</p> 
+    <footer class="footer">
+        © 2025 Mi Sitio Web. Todos los derechos reservados. 
+        <a href="#">Política de Privacidad</a>
     </footer>
 </body>
 </html>
