--- a/Ejercicio23/ejercicio23.html
+++ b/Ejercicio23/ejercicio23.html
@@ -5,18 +5,15 @@
   <meta charset="UTF-8"> <!-- conjunto de caracteres-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicio al cliente</title>
-  <link rel="stylesheet" href="css/styleEjercicio23.css"> <!--link a un css externo-->
-  <!--<link rel="stylesheet" href="styles.css"> <!--link a un css externo-->
-  <link rel="stylesheet" href="css/allpages.css"> <!--link a un css externo-->
-  <!--link a un js externo-->
+  <link rel="stylesheet" href="css/styleEjercicio23.css">
+  <link rel="stylesheet" href="css/allpages.css">
 </head>
 
 <body>
   <header>
     <nav class="barra__superior"> <!-- barra de navegacion superior-->
       <div class="logo"> <!-- logo de la pagina -->
-        <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> <!-- logo de la pagina -->
-        <!-- display: block; + maring 0 auto; centrar imagen  -->
+        <img src="Image/japon2.png" alt="Logo de Japon" width="100px" height="70px"> 
       </div>
       <div class="titulo__header"> <!-- titulo de la pagina -->
         <h1>Japon un lugar para visitar</h1><!--siempre estara mi titulo-->
@@ -46,7 +43,6 @@
     <a href="#">Política de Privacidad</a>
   </footer>
   <script src="js/ejercicio23.js"></script>
-  <!-- es mejor mover esta línea al final del <body> para asegurarte de que el DOM esté completamente cargado antes de que el script se ejecute -->
 </body>
 
 </html>
