--- a/punto 12 y 13/ejercicio12-13.html
+++ b/punto 12 y 13/ejercicio12-13.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 12 y 13</title>
 </head>
 <body>
-    <h1>Comprobación de Número Par/Impar</h1>
+    <h1>12. Comprobación de Número Par/Impar</h1>
     <button onclick="solicitarNumero()">Ingresar Número</button>
   
     <hr>
   
-    <h1>Mostrar Elementos de un Arreglo</h1>
+    <h1>13. Mostrar Elementos de un Arreglo</h1>
     <button onclick="mostrarArregloEjemplo()">Mostrar Arreglo</button>
     <div id="contenedorArray"></div>
   
